Fix long scrollbar in ie6

--- a/css/layout.css
+++ b/css/layout.css
@@ -49,7 +49,7 @@
         left: auto;
 }
 .webim-layout .webim-bgiframe{
-	height: 2.7em;
+	height: 2.6em;
 	top: -1px;
 	left: -1px;
 	width: 100%;
@@ -63,9 +63,9 @@
 	top: -1px;
 	left: -1px;
 	width: 100%;
-	height: 2.7em;
+	height: 2.6em;
 	z-index:-1;
-        border-bottom-width:0;
+        border-bottom-width:0 !important;
 }
 * html .webim-layout-bg{
 	width: expression(this.parentNode.offsetWidth+'px');
